take example_models and pomdpx_files out to the root directory

--- a/example_models/navigation/Makefile
+++ b/example_models/navigation/Makefile
@@ -14,8 +14,8 @@ SRCDIR = ./
 BINDIR = $(SRCDIR)/bin
 OBJDIR = $(SRCDIR)/build
 DEPDIR = $(SRCDIR)/.deps
-PROG = $(BINDIR)/adventurer
-INCLUDE_PATH = ../../despot_library
+PROG = $(BINDIR)/navigation
+INCLUDE_PATH = ../../src/despot_library
 
 # -----
 # Files
@@ -40,7 +40,7 @@ DIR_TGTS:
 	mkdir -p $(BINDIR) $(OBJDIR) $(DEPDIR)
 
 $(PROG): $(OBJS)
-	$(CXX) $(OBJS) $(LDFLAGS) $(INCL) -o $(PROG) ../../../lib/despot.a; \
+	$(CXX) $(OBJS) $(LDFLAGS) $(INCL) -o $(PROG) ../../lib/despot.a; \
 #	rm -r build
 
 $(DEPDIR)/%.d: %.cpp
