Added a package.xml file to support REP-136.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,3 +94,8 @@ install(EXPORT "DespotTargets"
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/DespotConfig.cmake"
   DESTINATION "${CONFIG_INSTALL_PATH}"
 )
+
+# Install a 'package.xml' file to be compliant with REP-136.
+install(FILES package.xml
+  DESTINATION "share/${PROJECT_NAME}"
+)
