--- a/examples/cpp_models/navigation/CMakeLists.txt
+++ b/examples/cpp_models/navigation/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-add_executable("${PROJECT_NAME}_navigation"
+find_package(Despot CONFIG REQUIRED)
+
+add_executable("navigation"
   src/navigation.cpp
   src/main.cpp
 )
-target_link_libraries("${PROJECT_NAME}_navigation"
-  "${PROJECT_NAME}"
-)
-install(TARGETS "${PROJECT_NAME}_navigation"
-  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
+
+target_link_libraries("navigation"
+  despot
 )
