--- a/examples/cpp_models/rock_sample/CMakeLists.txt
+++ b/examples/cpp_models/rock_sample/CMakeLists.txt
@@ -1,27 +1,27 @@
 cmake_minimum_required(VERSION 2.8.3)
 
+find_package(Despot CONFIG REQUIRED)
+
 include_directories(
   src
 )
 
-add_executable("${PROJECT_NAME}_rock_sample"
+add_executable("rock_sample"
   src/base/base_rock_sample.cpp
   src/rock_sample/rock_sample.cpp
   src/rock_sample/main.cpp
 )
-target_link_libraries("${PROJECT_NAME}_rock_sample"
-  "${PROJECT_NAME}"
+target_link_libraries("rock_sample"
+  despot
 )
 
-add_executable("${PROJECT_NAME}_fvrs"
+
+add_executable("fvrs"
   src/base/base_rock_sample.cpp
   src/fvrs/fvrs.cpp
   src/fvrs/main.cpp
 )
-target_link_libraries("${PROJECT_NAME}_fvrs"
-  "${PROJECT_NAME}"
-)
 
-install(TARGETS "${PROJECT_NAME}_rock_sample" "${PROJECT_NAME}_fvrs"
-  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
+target_link_libraries("fvrs"
+  despot
 )
