Reverting CMakeLists to old format

--- a/examples/cpp_models/tag/CMakeLists.txt
+++ b/examples/cpp_models/tag/CMakeLists.txt
@@ -1,38 +1,40 @@
-cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
+cmake_minimum_required(VERSION 2.8.3)
 
 include_directories(
   src
 )
 
-add_executable("laser_tag"
+add_executable("${PROJECT_NAME}_laser_tag"
   src/base/base_tag.cpp
   src/laser_tag/laser_tag.cpp
   src/laser_tag/main.cpp
 )
-
-target_link_libraries("laser_tag"
-  despot
+target_link_libraries("${PROJECT_NAME}_laser_tag"
+  "${PROJECT_NAME}"
 )
 
-
-add_executable("noisy_laser_tag"
+add_executable("${PROJECT_NAME}_noisy_laser_tag"
   src/base/base_tag.cpp
   src/noisy_laser_tag/noisy_laser_tag.cpp
   src/noisy_laser_tag/main.cpp
 )
-
-target_link_libraries("noisy_laser_tag"
-  despot
+target_link_libraries("${PROJECT_NAME}_noisy_laser_tag"
+  "${PROJECT_NAME}"
 )
 
-
-add_executable("tag"
+add_executable("${PROJECT_NAME}_tag"
   src/base/base_tag.cpp
   src/tag/tag.cpp
   src/tag/main.cpp
 )
-target_link_libraries("tag"
-  despot
+target_link_libraries("${PROJECT_NAME}_tag"
+  "${PROJECT_NAME}"
+)
+
+install(TARGETS
+    "${PROJECT_NAME}_laser_tag"
+    "${PROJECT_NAME}_noisy_laser_tag"
+    "${PROJECT_NAME}_tag"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
 )
