--- a/examples/cpp_models/adventurer/CMakeLists.txt
+++ b/examples/cpp_models/adventurer/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
-
-add_executable("adventurer"
+add_executable("${PROJECT_NAME}_adventurer"
   src/adventurer.cpp
   src/main.cpp
 )
-
-target_link_libraries("adventurer"
-  despot
+target_link_libraries("${PROJECT_NAME}_adventurer"
+  "${PROJECT_NAME}"
+)
+install(TARGETS "${PROJECT_NAME}_adventurer"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
 )
