--- a/examples/cpp_models/bridge/CMakeLists.txt
+++ b/examples/cpp_models/bridge/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
-
-add_executable("bridge"
+add_executable("${PROJECT_NAME}_bridge"
   src/bridge.cpp
   src/main.cpp
 )
-
-target_link_libraries("bridge"
-  despot
+target_link_libraries("${PROJECT_NAME}_bridge"
+  "${PROJECT_NAME}"
+)
+install(TARGETS "${PROJECT_NAME}_bridge"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
 )
