--- a/examples/cpp_models/chain/CMakeLists.txt
+++ b/examples/cpp_models/chain/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
-
-add_executable("chain"
+add_executable("${PROJECT_NAME}_chain"
   src/chain.cpp
   src/main.cpp
 )
-
-target_link_libraries("chain"
-  despot
+target_link_libraries("${PROJECT_NAME}_chain"
+  "${PROJECT_NAME}"
 )
-
+install(TARGETS "${PROJECT_NAME}_chain"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
+)
