--- a/examples/cpp_models/reg_demo/CMakeLists.txt
+++ b/examples/cpp_models/reg_demo/CMakeLists.txt
@@ -1,12 +1,13 @@
+
 cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
-
-add_executable("reg_demo"
+add_executable("${PROJECT_NAME}_reg_demo"
   src/reg_demo.cpp
   src/main.cpp
 )
-
-target_link_libraries("reg_demo"
-  despot
+target_link_libraries("${PROJECT_NAME}_reg_demo"
+  "${PROJECT_NAME}"
+)
+install(TARGETS "${PROJECT_NAME}_reg_demo"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
 )
