--- a/examples/cpp_models/simple_rock_sample/CMakeLists.txt
+++ b/examples/cpp_models/simple_rock_sample/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-find_package(Despot CONFIG REQUIRED)
-
-add_executable("simple_rock_sample"
+add_executable("${PROJECT_NAME}_simple_rock_sample"
   src/simple_rock_sample.cpp
   src/main.cpp
 )
-
-target_link_libraries("simple_rock_sample"
-  despot
+target_link_libraries("${PROJECT_NAME}_simple_rock_sample"
+  "${PROJECT_NAME}"
+)
+install(TARGETS "${PROJECT_NAME}_simple_rock_sample"
+  RUNTIME DESTINATION "${BINARY_INSTALL_PATH}"
 )
