Simple_tui --> Initializer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ add_library("${PROJECT_NAME}" SHARED
   src/pomdpx/parser/variable.cpp
   src/pomdpx/pomdpx.cpp
   src/random_streams.cpp
-  src/simple_tui.cpp
+  src/initializer.cpp
   src/solver/aems.cpp
   src/solver/despot.cpp
   src/solver/pomcp.cpp
