--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ add_library("${PROJECT_NAME}" SHARED
   src/core/solver.cpp
   src/core/builtin_upper_bounds.cpp
   src/logger.cpp
+  src/planner.cpp
+  src/evaluator.cpp
   src/pomdpx/parser/function.cpp
   src/pomdpx/parser/parser.cpp
   src/pomdpx/parser/variable.cpp
